--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
-project('ray_tracing', 'cpp', default_options : ['cpp_std=c++17'])
-
-includes = include_directories('.')
-
-executable('main', 'main.cc', include_directories : includes)
+project('ray_tracing', 'cpp',
+  default_options : ['cpp_std=c++17'],
+  version         : '0.1.0',
+  license         : 'MIT')
+subdir('src')
